Fix alignment

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -25,3 +25,5 @@ $georgia: Georgia, serif;
     @content;
   }
 }
+
+$fa-font-path:   "../css/font";
