--- a/style.scss
+++ b/style.scss
@@ -261,7 +261,7 @@ img {
 //
 
 .wrapper-masthead {
-  margin-bottom: 50px;
+  margin-bottom: 20px;
   // border-bottom: 1px solid #ddd;
 }
 
@@ -439,6 +439,10 @@ nav {
   height: 100px;
   width: 100%;
   overflow:hidden;
+}
+
+.container-elip {
+  margin-top: 100px
 }
 
 footer {
